--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "msgpack"]
 	path = msgpack
-	url = git@github.com:citrusleaf/msgpack
+	url = https://github.com/aerospike/msgpack
 [submodule "aerospike-common"]
 	path = aerospike-common
-	url = git@github.com:citrusleaf/aerospike-common.git
+	url = https://github.com/aerospike/aerospike-common
 [submodule "aerospike-mod-lua"]
 	path = aerospike-mod-lua
-	url = git@github.com:citrusleaf/aerospike-mod-lua.git
+	url = https://github.com/aerospike/aerospike-mod-lua
